@@ -1,3 +1,4 @@
+* Add balance non-deferral wizard
 * Display write-off amount in reconciliation
 * Enforce same company for a chart of account
 * Change tax percentage into rate
